UI and keybindings node with TomSelect

--- a/src/ui/style.scss
+++ b/src/ui/style.scss
@@ -1,18 +1,18 @@
 :root {
   &.tokyo {
-    --bg: #0a0047;
-    --sbg: #004687;
-    --prim: #ff4499;
-    --sec: #00ffd2;
+    --bg: #0a0047de;
+    --sbg: #0a3964;
+    --prim: #05c5a2;
+    --sec: #ff4499;
   }
   &.mocha {
-    --bg: #1a1823;
-    --sbg: #1a1823;
+    --bg: #1a1823de;
+    --sbg: #36314e;
     --prim: #c29df1;
     --sec: #f3bce6;
   }
   &.siloe {
-    --bg: #f9e0e3;
+    --bg: #f9e0e3de;
     --sbg: #fffbdc;
     --prim: #602766;
     --sec: #713d77;
@@ -32,15 +32,18 @@
   // border: var(--sec) 1px solid;
   box-sizing: border-box;
   transition: all 0.1s ease-in-out;
-  background-color: var(--bg);
-  color: var(--prim);
+  transition: color 0.05s;
+  border-radius: 2px;
 }
 
 html {
   height: 100%;
   overflow-x: hidden;
   font-size: 62.5%;
+  background-color: var(--bg);
+  color: var(--prim);
   font-family: "CommitMono Nerd Font Mono", monospace;
+  min-height: 0;
 }
 
 body {
@@ -50,6 +53,15 @@ body {
   flex-direction: column;
   min-height: 100%;
   height: 100%;
+  min-height: 0;
+  overflow: hidden;
+}
+header {
+  padding: 1rem;
+  border-bottom: 1px solid var(--prim);
+  &:hover {
+    transform: scale(1.01);
+  }
 }
 
 div#main {
@@ -57,6 +69,7 @@ div#main {
   display: flex;
   flex: 1;
   flex-direction: row;
+  min-height: 0;
 }
 
 aside#sidebar {
@@ -72,41 +85,148 @@ aside#sidebar {
       align-content: center;
       height: 3rem;
       padding-left: 2rem;
-      border-radius: 1ch;
+      border-radius: 0ch;
+      overflow: hidden;
       &:hover {
         transform: scale(1.05);
         background-color: var(--sec);
         border: 1px solid var(--sec);
         color: var(--bg);
+        font-weight: 600;
       }
       &:active {
         transform: scale(0.95);
         background-color: var(--sec);
+        font-weight: 600;
+      }
+      &.selected {
+        background-color: var(--sec);
+        color: var(--bg);
+        font-weight: 600;
       }
     }
   }
 }
 
-header {
-  border-bottom: 1px solid var(--prim);
-  padding: 1rem;
+#content-area {
+  flex: 1;
+  padding-left: 2rem;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 0;
+  .config-set {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    min-height: 0rem;
+    overflow: auto;
+    height: 100%;
+  }
+  h1 {
+    font-size: 1.6rem;
+    margin-bottom: 1rem;
+  }
 }
+
 footer {
   display: flex;
   flex-direction: row;
+  align-items: center;
   > * {
     font-size: 1rem;
   }
 }
 a {
+  background-color: none;
+  color: var(--prim);
   // font-size: 1rem;
+  &:checked {
+    color: var(--prim);
+  }
 }
 button {
+  // padding: 0.5rem;
+  background: none;
   border: none;
+  cursor: pointer;
   &:hover {
     transform: scale(1.1);
   }
 }
 
-.selected {
+// .selected {
+//   border: 1px solid var(--prim);
+// }
+
+.hidden {
+  display: none !important;
+  visibility: hidden;
+  flex: 0;
+}
+.editor-item {
+  // border: 1px solid var(--sbg);
+  background-color: var(--bg);
+  background-blend-mode: darken;
+  opacity: 0.7;
+  margin-top: 1rem;
+  padding: 0.5rem;
+  transition: opacity 1s;
+  &:focus-within {
+    opacity: 1;
+    border: 1px solid var(--prim);
+  }
+  .keybind-editor {
+    display: flex;
+    flex-direction: row;
+    > * {
+      flex: 1;
+      margin-right: 2rem;
+    }
+  }
+}
+.comment-area {
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1rem;
+  > * {
+    align-items: center;
+    justify-content: center;
+    opacity: (0.6);
+    height: 2rem;
+    &:focus {
+      opacity: 1;
+      border: none;
+      outline: none;
+      border-bottom: 1px solid var(--sec);
+    }
+  }
+  .comment {
+    display: flex;
+    font-style: italic;
+    padding: 2px;
+    background-color: rgba($color: #000000, $alpha: 0);
+    height: 2rem;
+    color: var(--prim);
+    width: 100%;
+    border: 0;
+    resize: none;
+    align-items: center;
+    // text-align: center;
+    &:hover {
+      opacity: 1;
+      cursor: text;
+    }
+    [contenteditable="true"] {
+      cursor: text;
+    }
+  }
+  .comment-hashtag {
+    align-items: center;
+    padding-top: 4px;
+  }
 }
