--- a/src/ui/style.css
+++ b/src/ui/style.css
@@ -239,7 +239,7 @@ h1#config-set-title {
   top: 0;
   left: 1rem; /* adjust for spacing */
   transform: translateY(-50%);
-  background-color: var(--surface-0); /* match your group background */
+  background-color: var(--surface-1); /* match your group background */
   padding: 0 0.5em;
   font-size: 1.6rem;
   color: var(--text-1);
@@ -526,6 +526,23 @@ button#theme-toggle:hover {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: var(--surface-border);
+}
+
+#onboarding {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 999;
+  background-color: var(--surface-0) 50%;
+  backdrop-filter: blur(10px);
+  backdrop-filter: brightness(-0.5);
+  justify-items: center;
+  justify-content: center;
+  align-items: center;
+  transition: all 1s;
 }
 
 /*# sourceMappingURL=style.css.map */
